--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       href="https://fonts.googleapis.com/css?family=Merienda&display=swap"
       media="all"
     />
+    <link rel="icon" type="image" href="/src/assets/Hanger.webp" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TinyTrends</title>
   </head>
